[tool.poetry]
name = "mtv_dl"
version = "0.0.0"
description = "MediathekView Downloader"
readme = "DESCRIPTION.rst"
authors = ["Frank Epperlein <frank+mtv_dl@epperle.in>"]
repository = "https://github.com/fnep/mtv_dl"
license = "MIT License"
classifiers = [
    "Topic :: Multimedia :: Video",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: Public Domain",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.10"
iso8601 = "^2.1.0"
docopt = "^0.6.2"
durationpy = "^0.7"
PyYAML = "^6.0"
beautifulsoup4 = "^4.12.3"
rich = "^13.8.0"
certifi = "^2024.8.30"
ijson = "^3.3.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
twine = "^5.1.1"
types-PyYAML = "^6.0.12.20240808"
types-certifi = "^2021.10.8.3"
pytest = "^8.3.2"
ruff = "^0.6.3"
pytest-black = "^0.3.12"
pytest-mypy = "^0.10.3"
pytest-ruff = "^0.4.1"

[tool.poetry.scripts]
mtv_dl = 'mtv_dl:main'

[tool.poetry-dynamic-versioning]
enable = true
pattern = '^v(?P<base>\d+\.\d+)'
format = '{base}.{distance}'

[tool.mypy]
strict = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
target-version = "py310"
lint.select = [
    "A",
    "ARG",
    "E",
    "F",
    "I",
    "N",
    "PTH",
    "Q",
    "RUF",
    "SIM",
    "UP",
    "W",
]
lint.isort.force-single-line = true
exclude = [".venv"]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
